--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-unicorn": "^27.0.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.3",
+    "parcel-bundler": "^1.12.4",
     "prettier": "^2.2.1"
   },
   "lint-staged": {
