update json + rd

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "url": "git+https://github.com/Freecey/react-pomodoro.git"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Cedric AUDRIT",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Freecey/react-pomodoro/issues"
   },
