--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "npx eslint --fix --cache src",
-    "build": "npx parcel build src/index.html"
+    "build": "npx parcel build src/index.html",
+    "work": "npx parcel src/index.html --log-level 4"
   },
   "repository": {
     "type": "git",
